--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Phone Tube</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.11/dist/full.min.css"
       rel="stylesheet"
